Fix spacing issue

--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -49,7 +49,7 @@
 		}
 
 		.contact-btn {
-			margin: 50px auto;
+			margin: 50px auto 0 auto;
 			width: 120px;
 			text-align: center;
 			color: #fff;
